Update and rename perdoname.html to abrelo.html

--- a/abrelo.html
+++ b/abrelo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¿me perdonas?</title>
+    <title>¿quieres ser mi novia?</title>
     <style>
         body {
             display: flex;
@@ -164,7 +164,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>¿me perdonas?</h1>
+        <h1>¿quieres ser mi novia?</h1>
         <button id="yesButton">Sí</button>
         <button id="noButton">No</button>
     </div>
@@ -172,7 +172,7 @@
     <div id="myModal" class="modal">
         <div class="modal-content">
             <span class="close" id="closeModal">&times;</span>
-            <p>¡Yo sabía que me perdonarias!</p>
+            <p>¡Yo sabía que dirias que si!</p>
             <button id="acceptButton">Aceptar</button>
         </div>
     </div>
